# aubit-poly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile.python  Dockerfile.trade-executor  README.md  benchmark_python.py  docker-compose-db.yml  docker-compose.yml  ecosystem.config.js  main.py  pyproject.toml  redeem.py  run_binance_mispricing_backtest.py  run_probability_gap_backtest.py  run_probability_gap_optimization.py
.sqlx/: query-012480b9f372cb73f461b1edafadabfa18a65fe2361b732d4ee907b5a6d5f1b2.json  query-0980f5eec4b1f19c306d96e60a824ff4637496c103c777f36b4a73e600d8ddee.json  query-0b25f6d4140af64d12f14e476fdcfeedb3e2c3eb70bf7e23825167470e082f7d.json  query-0dfee2a515084133df3f4374169c53d36ddd5dfc50cca26aad1ba5e597c124d1.json  query-14ad47c25494d09d1bc14d7e8b582cb113719d9cbc542332de8b44d264787f4b.json  query-16c3632591f97b95a86f80480e4667441556719c3d948d6748e6450845363f8b.json  query-18e832f0538730c9e012bbd758089891670ad0b26b4626df1bb25a82ef81c7b5.json  query-1ce75d17f8aa3d5525b9e30c440002d69569b29fde9d9abf7e4625a9f80ddcbe.json  query-2243ac10cbaa3af4d346ae42e7ab85fedcf55ff6abf996a2c6fdf4b2d0559264.json  query-2406e441e0c39a2832c74104f1ad96219e8823d9a388cab73815970997422ba0.json  query-35fc7ef5ee484eed4cd2ea8e9e62baf136c864b9c0f23f5b9414a7d83f900161.json  query-3e50c0c31ebfc475d090478a9cf5253d870e74f0fa550fe4e1a72419b7aad907.json  query-3eeb5326634b0b18870a50562334bdb984679c08bb07401e6056db4ff09fab15.json  query-4273bc9bb83eeabb9898df3ab0bfb53c978f2bb5f37a5920862525c1991c927d.json  query-431f3b72317387b7e911982d1d75772c03beee5c2b236512c4cdc4a44cd68eef.json  query-43da5846045836a2ae9bb54ee67f50eefb40fd9891fa830bfea1fbe1487d65fd.json  query-521855ecec8e4ab56dd77f383a58dafe74711a8d0fa1b47d34723a8eff8be581.json  query-57e444938f51c4e37bbbf598a7e109032ced7e230e7a068dddbe10bb6909faef.json  query-59b568bbd73afb253fa7ea4b9ecb78a0355722c95b64125c0d7b8fea276f18f2.json  query-68976e2f5f013ad7b37cbe10124e4c0e6e0619119557e67537692b931b301c1d.json  query-6900032238c812d0f6c985f25468ac60ce34a42324df722390a1678f6e6a54ed.json  query-69438cd46542d8be2db97839612d3cc0615e903e4e273cbad53d018eadb6bc1e.json  query-6a5938f9af48aa4fe15b8154202e5b8ba0cc8f0d8bef1c6264fa4b85e2d849c2.json  query-6d899805f1e4e42740c8af1ef6d4214454f671ca4aeda7ff25ae4e2342ec10b9.json  query-728b20440367fe30d4c3c0176ef9ffdda8891cd35f7512a5d7d21d878d00dfd4.json  query-74742a9ab7d8c0016ecc62524175b82b5d0ac9a0595999db41b8c0ad72e44852.json  query-76a68edd8efc5a568b3ba58314e6d0258c156fc997b6451731228eed3280b49d.json  query-80368621923d8d94ee3102f0caae93cf0da700a5fdaa04e32adf441a7ccf0b86.json  query-89d8fad2fc40137e8a8343a2d112d53284db702a28dabcfb45bda55e5a278a00.json  query-8d613e0fdc9a6d16b034c64b7c2231131a2f3cfde064790573a6a0b3f14d8eea.json  query-8e8a653397d7f24e096cdb68b16437e049d6dc64b3f51b5a86eca48771bdf501.json  query-9eeadcf2a1eb72bd004cc1fcd8940245ab57017c221c7d8815cfa528ee0e75d7.json  query-a44c269ba49832fc2eae8b374cc0bc102d9f8cdca31c6eb738dcd7477a371b39.json  query-a97d1da9aa5bf8c006f214717ad2a99c50d8e7c551bda7fd05d679e788a65572.json  query-b146876a047faf6fd762a4216c196eb3713fa5977dcbbdf1dc566b58adf94b2b.json  query-b4c107967fe20cce241c17450649f92d531d58d7c7e82612f012c7beed4a5ddc.json  query-c5463cef40c3f8858c867363c732cf98ea4b7d61f63d3738499ed4f161c5a3b6.json  query-c5b956b151f64355ae81364b86fb53a185a464e1bed7c891daf6d8feaa87aeac.json  query-cdf6a3fd5faf29ef862d16aae76ef9dc12cfffc944a3fc969e1e442ae8a487fd.json  query-d70f8829833a5fc50b5bcdce13943736296834c3969a248f0f782f0c184fd41a.json  (+8 more)
docx/UserInstructions/: setup-api-keys.md
docx/core/: 01-PRODUCT.md  02-TECH_STACK.md  03-CODEBASE_GUIDE.md  04-CRITICAL_KNOWLEDGE.md
migrations/: 001_initial.sql  002_order_tracking.sql  003_separate_timestamps.sql  004_backtest_history.sql  005_momentum_tables.sql  006_kalshi_support.sql  007_limitless_support.sql
notebooks/: polymarket_trading.ipynb
pylo/: __init__.py
pylo/alerts/: __init__.py  notifier.py
pylo/arbitrage/: __init__.py  cross_platform.py  detector.py  event_matcher.py  hedging.py  internal.py  profitability_filter.py  resolution_validator.py
pylo/backtest/: __init__.py  data_fetcher.py  metrics.py  models.py  optimizer.py  plot_cases.py  reports.py  simulator.py
pylo/bots/: __init__.py  db_market_monitor.py  db_spread_arb_bot.py  dry_run_executor.py  edge_trader.py  market_monitor.py  models.py  position_redeemer.py  position_tracker.py  spread_arb_bot.py  spread_detector.py
pylo/cli/: __init__.py  backtest.py
pylo/config/: __init__.py  settings.py
pylo/data_sources/: __init__.py  base.py  kalshi.py  limitless.py  polymarket.py
pylo/db/: __init__.py  connection.py  models.py  queries.py
pylo/jobs/: price_collector.py
pylo/models/: __init__.py  market.py  opportunity.py
pylo/probability/: __init__.py  edge_detector.py  historical.py  momentum.py
pylo/tools/: __init__.py  load_limitless.py  price_compare.py
pylo/utils/: __init__.py  (+1 more)
scripts/: check_polymarket_creds.py  debug_scan.py  place_order.py  resolve_trades.py  run_spread_bot.py  test_binance_bookticker.py
src/common/: Cargo.toml
src/common/src/: binance_ws.rs  clob.rs  config.rs  db.rs  executor.rs  gamma.rs  kalshi.rs  kalshi_ws.rs  lib.rs  limitless.rs  limitless_ws.rs  models.rs  platform.rs  polymarket_rtds.rs  repository.rs
src/cross-platform-arb/: Cargo.toml
src/cross-platform-arb/src/: detector.rs  event_matcher.rs  main.rs  slippage.rs
src/kalshi-orderbook-stream/: Cargo.toml
src/kalshi-orderbook-stream/src/: main.rs
src/market-scanner/: Cargo.toml
src/market-scanner/src/: main.rs
src/momentum-trader/: Cargo.toml
src/momentum-trader/src/: detector.rs  main.rs  metrics.rs
src/orderbook-stream/: Cargo.toml
src/orderbook-stream/src/: main.rs
src/poly-check/: Cargo.toml
src/poly-check/src/: main.rs
src/trade-executor/: Cargo.toml
src/trade-executor/src/: balance.rs  clob_ops.rs  config.rs  detector.rs  executor.rs  main.rs  metrics.rs  models.rs
tests/: __init__.py  conftest.py  test_arbitrage.py  test_db_market_monitor.py  test_models.py  test_utils.py
(+52 files in other folders)
