[workspace]
resolver = "2"
members = [
    "src/common",
    "src/market-scanner",
    "src/orderbook-stream",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["aubit"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
url = "2.5"
futures-util = "0.3"
