[project]
name = "aubit-poly"
version = "0.1.0"
description = "Prediction market arbitrage detection between Polymarket and real-world markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",

    # Crypto Exchanges
    "ccxt>=4.4.0",
    "python-binance>=1.0.19",

    # Stock/Options Data
    "yfinance>=0.2.49",
    "pandas>=2.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",

    # Alerts (optional)
    "aiohttp>=3.10.0",

    # Async utilities
    "asyncio-throttle>=1.0.2",

    # Blockchain (for position redemption)
    "web3>=7.0.0",
]

[project.optional-dependencies]
alerts = [
    "discord.py>=2.4.0",
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "pandas-stubs>=2.2.0",
    "types-aiofiles>=24.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "binance.*",
    "yfinance.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["pylo"]

[tool.hatch.build.targets.wheel]
packages = ["pylo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
