[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
url.workspace = true
futures-util.workspace = true

[dev-dependencies]
serial_test = "3"
