[package]
name = "cross-platform-arb"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cross-platform-arb"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1.36"
