[package]
name = "market-scanner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "market-scanner"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
