[package]
name = "momentum-trader"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "momentum-trader"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1.36"
dotenvy.workspace = true
futures-util.workspace = true
