[package]
name = "orderbook-stream"
version.workspace = true
edition.workspace = true

[[bin]]
name = "orderbook-stream"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tokio-tungstenite.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
futures-util.workspace = true
rust_decimal.workspace = true
